samples/pass/global_shadow.c
int g = 10;

int main() {
    int g = 3;
    print_int(g);
    print_newline();
    return g;
}
