samples/fail/global_function_collision.c
int g = 1;

int g() {
    return 0;
}
